# screen_recorder_sdk

./: appveyor.yml
python/: MANIFEST.in  pyproject.toml  setup.py
python/screen_recorder_sdk/: screen_recorder.py
